# rhoboto

./: .env.example  .gitignore  .pre-commit-config.yaml  .profile  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
bot/: __init__.py  bot.py  config.py  translator.py
cogs/: admin_notifications.py  features.py  language.py  room_number.py  shift.py  shift_notice.py  shift_register.py  team.py  team_register.py
components/: __init__.py  ui_admin_notifications.py  ui_auto_guide.py  ui_feature_channel.py  ui_google_sheets_errors.py  ui_language_settings.py  ui_permissions.py  ui_room_number.py  ui_settings_flow.py  ui_shift_notice.py  ui_shift_register.py  ui_storage_errors.py  ui_team_register.py  ui_worksheet_contract_errors.py
docs/: admin_notifications_design.md  agent_harness.md  announcement_language_settings_design.md  encore_role_selector_design.md  feature_channel_base_refactor_design.md  google_sheets_a1_cell_reference_contract.md  manual_integration_validation.md  project_setup.md  register_settings_lifecycle_design.md  register_settings_lifecycle_implementation_plan.md  room_number_design.md  runtime_architecture_review.md  shift_notice_design.md  shift_register_deadline_auto_close_design.md  shift_register_draft_generation_design.md  shift_register_final_schedule_generation_design.md  shift_register_schedule_image_posting_design.md  shift_register_schedule_role_assignment_design.md  shift_register_team_source_design.md  shift_register_timeline_migration.md  storage_error_handling_design.md
utils/: db.py  (+30 more)
(+154 files in other folders)
