[project]
name = "rhoboto"
version = "0.1.0"
description = "Multi-feature Discord bot with Google Sheets integration."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "discord.py>=2.5.2",
    "async-lru>=2.0.2",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "tortoise-orm>=0.20.0",
    "asyncpg>=0.30.0",
    "google-auth>=2.0.0",
    "gspread-asyncio>=1.3.0",
    "jinja2>=3.1.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "black==25.9.0",
    "pre-commit==4.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "ruff==0.12.4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "UP046"]

[tool.ruff.lint.per-file-ignores]
"cogs/shift_register.py" = ["PLR0913"]
"components/ui_shift_register.py" = ["PLR0913"]
"components/ui_team_register.py" = ["PLR0913"]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
